- fixed sticky position of tag filter section - fixed buy/sell + price badge z-index (left button needs to be on top of the right to remove the dark shared border)

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -46,6 +46,7 @@
     padding-left: 0.5rem;
     padding-top: 0.0rem;
     padding-bottom: 0.0rem;
+    z-index: 1;
 }
 
 .btn-group.buy-sell .btn:last-child {
@@ -56,9 +57,6 @@
     padding-right: 4px;
 }
 
-.badge.tag-freq {
-    background-color: grey;
-}
 
 .separator {
     display: flex;
